# HFFMobileMods

./: CMakeLists.txt  README.md
BNMGUI/: BNMGUI.hpp  BNMGUI_Classes.hpp
BNMUtils/: BNMUtils.hpp
ByNameModding/: CMakeLists.txt  README.md
ByNameModding/include/BNM/: Class.hpp  Coroutine.hpp  Utils.hpp
ByNameModding/include/BNM/UserSettings/: GlobalSettings.hpp  Il2CppMethodNames.hpp
ByNameModding/src/: Class.cpp  Loading.cpp  Utils.cpp
ByNameModding/src/private/: Internals.hpp
ImGui/: CMakeLists.txt  imgui_manager.cpp
ImGui/imgui/: imconfig.h
ImGui/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h
ImGui/include/: imgui_manager.hpp
Mods/HFFAchievement/: Achievements.hpp  CMakeLists.txt  Classes.hpp  HFFAchievement.cpp
Mods/HFFChat/: CMakeLists.txt  Classes.hpp  HFFChat.cpp
Mods/HFFCustomLevel/: CMakeLists.txt  Classes.hpp  HFFCustomLevel.cpp
Mods/HFFCustomization/: CMakeLists.txt  Classes.hpp  HFFCustomization.cpp
Mods/HFFMultiplayer/: CMakeLists.txt  HFFMultiplayer.cpp
Mods/HFFSettings/: CMakeLists.txt  Classes.cpp  Classes.hpp  HFFSettings.cpp  Settings.cpp  SettingsImpl.cpp
Mods/HFFSettings/include/: Classes.hpp  Settings.hpp  SettingsImpl.hpp
Mods/HFFSettings/include/mINI/: ini.h
Mods/HFFTimer/: CMakeLists.txt  Classes.cpp  Classes.hpp  HFFTimer.cpp  HFFTimer.hpp  LevelNumbers.hpp  Subsplits.cpp  SubsplitsManager.cpp  SubsplitsManager.hpp
SharedData/: CMakeLists.txt  SharedData.cpp
SharedData/include/: SharedData.hpp
mINI/src/mini/: ini.h
